--- a/responsive.css
+++ b/responsive.css
@@ -256,6 +256,10 @@
         padding: 15px 40px;
     }
 
+    header h2 {
+        font-size: 2.5em;
+    }
+
     .navigation ul {
         width: 50%;
     }
@@ -332,8 +336,8 @@
 }
 
 @media (max-width: 480px) {
-    header h1 {
-        font-size: 2.5em;
+    header h2 {
+        font-size: 2em;
     }
 
     .navigation ul {
